--- a/public/assets/css/customCSS.css
+++ b/public/assets/css/customCSS.css
@@ -29,3 +29,48 @@
 .barCityState {
   margin-top: -12px;
 }
+
+.fa-fw {
+  color: black;
+}
+
+[rel="popover"]{
+  cursor: pointer;
+  display:inline-block; /* chrome-fix */
+}
+
+.module-title {
+  font: 700 38px/1.2 'Dancing Script', cursive;
+  margin: 0 0 18px;
+  text-align:center;
+}
+.modalMenu {
+  cursor: pointer;
+}
+
+.menu-title,
+.menu-detail,
+.menu-price-detail {
+  text-align: left;
+  padding-left: 15%;
+}
+
+.menu-detail {
+  margin-top: -15px;
+  padding-bottom: 5px;
+}
+
+#modalMenuHeight {
+  overflow:scroll;
+  height:400px;
+}
+
+body.modal-open {
+  position: fixed;
+  width: 100%;
+  top:0;
+  left: 0;
+  height: 100%;
+  overflow-y: scroll !important;
+  z-index: 10;
+}
