--- a/public/assets/css/customCSS.css
+++ b/public/assets/css/customCSS.css
@@ -69,15 +69,15 @@
   height:400px;
 }
 
-body.modal-open {
-  position: fixed;
-  width: 100%;
-  top:0;
-  left: 0;
-  height: 100%;
-  overflow-y: scroll !important;
-  z-index: 10;
-}
+/*body.modal-open {*/
+  /*position: fixed;*/
+  /*width: 100%;*/
+  /*top:0;*/
+  /*left: 0;*/
+  /*height: 100%;*/
+  /*overflow-y: scroll !important;*/
+  /*z-index: 10;*/
+/*}*/
 
 .star-rating, .back-stars, .front-stars {
   display: flex;
